WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
277866
Fix thread safety issues in WebPushDaemon
https://bugs.webkit.org/show_bug.cgi?id=277866
Summary
Fix thread safety issues in WebPushDaemon
Ben Nham
Reported
2024-08-09 11:07:27 PDT
See PR
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-08-09 11:07:41 PDT
<
rdar://problem/133553571
>
Ben Nham
Comment 2
2024-08-09 11:09:43 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/31954
EWS
Comment 3
2024-08-11 20:39:10 PDT
Committed
282108@main
(7f0adb9a948d): <
https://commits.webkit.org/282108@main
> Reviewed commits have been landed. Closing PR #31954 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug